# pear-expo-hello-world

./: .gitignore  .gitmodules  App.js  CMakeLists.txt  README.md  app.json  package-lock.json  package.json
bare/: bundle.config.js  hello-bare-jsi.hpp  hello-bare.cc  hello-bare.h  main.js  runtime.js
lib/: native.js
modules/hello-bare/: expo-module.config.json  index.ts
modules/hello-bare/android/: build.gradle
modules/hello-bare/android/src/main/java/to/holepunch/hellobare/: HelloBare.java  HelloBareModule.kt
modules/hello-bare/android/src/main/jni/: CMakeLists.txt  hello-bare.cc
modules/hello-bare/ios/: HelloBare.h  HelloBare.mm  HelloBare.podspec  HelloBareModule.swift
modules/hello-bare/src/: HelloBare.types.ts  HelloBareModule.ts  HelloBareView.tsx  HelloBareView.web.tsx
